--- a/hrm-system/app/globals.css
+++ b/hrm-system/app/globals.css
@@ -7,6 +7,7 @@
   --white: #ffffff;
   --black: #1c1c1e;
   --gray: #eeeeee;
+  --red: rgb(223, 67, 67);
 }
 
 @theme inline {
@@ -16,6 +17,7 @@
   --color-white: var(--white);
   --color-black: var(--black);
   --color-gray: var(--gray);
+  --color-red: var(--red);
   --font-sans: var(--font-inter);
 }
 
